# digital-marketing-analyst

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
midterm/: build-features.ipynb  churn-prediction.ipynb  churn-rate.ipynb  customer-life-time-value.ipynb  customer-revenue-prediction.ipynb  customer-segmentation.ipynb
