[tool.poetry]
name = "digital-marketing-analyst"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.2"
pandas = "^2.2.1"
pre-commit = "^3.6.2"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
kmodes = "^0.12.2"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
